# snogeholm

./: README
adlink-driver/: README
adlink-driver/mod/: Makefile  adlink.c  adlink.h
adlink-driver/src/: adlink.c  adlink.h
gui-src/: Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.cache  config.h  configure  configure.in  glade.slim.bak  slim.glade.bak  slim.glade.finfin  slim.glade.funkade  spec-dev.txt  translated.txt
gui-src/docs/: HOWTO.txt  Tangentbordsnavigering.txt  buggar.txt  env-vars.txt
gui-src/macros/: Makefile  Makefile.in
gui-src/pixmaps/: edwin1.xpm  off.xpm  on.xpm
gui-src/po/: POTFILES.in
gui-src/src/: Makefile  Makefile.am  Makefile.in  adlink.c  adlink.h  callbacks.c  callbacks.c.old  callbacks.h  common.h  config.c  elev.c  interface.c  interface.h  main.c  program.c  program.h  proto.h  slim-main.c  vis.c
